trunk/Archive2/61/d6d10158d0319e/output
main.cpp: In function 'void bar()':
main.cpp:10:12: error: expected primary-expression before '>' token
     s.foo<T>(); // error: < parsed as less than operator
            ^
main.cpp:10:14: error: expected primary-expression before ')' token
     s.foo<T>(); // error: < parsed as less than operator
              ^
